Fix #182, issue with stat table wrapping

--- a/src/client/global.scss
+++ b/src/client/global.scss
@@ -56,7 +56,7 @@ ion-alert .alert-wrapper {
     &:first-child {
       text-align: right;
       white-space: normal;
-      word-break: break-all;
+      overflow-wrap: break-word;
     }
 
     .move-right {
